--- a/AirQuality - Copia/app/src/main/res/layout/dialog_forgot_password.xml
+++ b/AirQuality - Copia/app/src/main/res/layout/dialog_forgot_password.xml
@@ -106,11 +106,9 @@
             style="@style/Widget.Material3.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:backgroundTint="@color/purple_black"
-            android:paddingStart="50dp"
-            android:paddingEnd="50dp"
             android:text="@string/reset_password"
             android:textColor="@color/white"
             android:textSize="20sp"
