--- a/AirQuality - Copia/app/src/main/res/layout/fragment_welcome.xml
+++ b/AirQuality - Copia/app/src/main/res/layout/fragment_welcome.xml
@@ -116,28 +116,14 @@
             android:backgroundTint="@color/purple_black"
             android:paddingStart="50dp"
             android:paddingEnd="50dp"
-            android:text="@string/sign_in"
+            android:text="@string/start"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-        <Button
-            android:id="@+id/button2"
-            style="@style/Widget.Material3.Button.OutlinedButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="@color/white"
-            android:paddingStart="50dp"
-            android:paddingEnd="50dp"
-            android:text="@string/sign_up"
-            android:textColor="@color/purple_black"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
