--- a/AirQuality - Copia/app/src/main/res/navigation/nav_graph.xml
+++ b/AirQuality - Copia/app/src/main/res/navigation/nav_graph.xml
@@ -6,26 +6,35 @@ xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/nav_graph"
 app:startDestination="@id/homeFragment">
 
-<fragment
-    android:id="@+id/homeFragment"
-    android:name="com.example.airquality.ui.main.HomeFragment"
-    android:label="fragment_home"
-    tools:layout="@layout/fragment_home">
-    <action
-        android:id="@+id/action_homeFragment_to_searchFragment"
-        app:destination="@id/searchFragment" />
-    <action
-        android:id="@+id/action_homeFragment_to_accountFragment"
-        app:destination="@id/accountFragment" />
-</fragment>
-<fragment
-    android:id="@+id/searchFragment"
-    android:name="com.example.airquality.ui.preferences.SearchFragment"
-    android:label="fragment_search"
-    tools:layout="@layout/fragment_search" />
-<fragment
-    android:id="@+id/accountFragment"
-    android:name="com.example.airquality.ui.account.AccountFragment"
-    android:label="fragment_account"
-    tools:layout="@layout/fragment_account" />
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.airquality.ui.main.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_homeFragment_to_searchFragment"
+            app:destination="@id/searchFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_accountFragment"
+            app:destination="@id/accountFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.airquality.ui.preferences.SearchFragment"
+        android:label="fragment_search"
+        tools:layout="@layout/fragment_search" />
+    <fragment
+        android:id="@+id/accountFragment"
+        android:name="com.example.airquality.ui.account.AccountFragment"
+        android:label="fragment_account"
+        tools:layout="@layout/fragment_account" >
+        <action
+            android:id="@+id/action_accountFragment_to_welcomeActivity"
+            app:destination="@id/welcomeActivity" />
+    </fragment>
+    <activity
+        android:id="@+id/welcomeActivity"
+        android:name="com.example.airquality.ui.welcome.WelcomeActivity"
+        android:label="WelcomeActivity"
+        tools:layout="@layout/activity_welcome"/>
 </navigation>
