--- a/AirQuality - Copia/app/src/main/res/navigation/welcome_nav_graph.xml
+++ b/AirQuality - Copia/app/src/main/res/navigation/welcome_nav_graph.xml
@@ -13,6 +13,7 @@
         android:id="@+id/action_welcomeFragment_to_signInFragment"
         app:destination="@id/signInFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/signInFragment"
         android:name="com.example.airquality.ui.welcome.SignInFragment"
@@ -24,6 +25,7 @@
             android:id="@+id/action_signInFragment_to_mainActivity"
             app:destination="@id/mainActivity" />
     </fragment>
+
     <fragment
         android:id="@+id/signUpFragment"
         android:name="com.example.airquality.ui.welcome.SignUpFragment"
@@ -35,8 +37,13 @@
             android:id="@+id/action_signUpFragment_to_signInFragment"
             app:destination="@id/signInFragment" />
     </fragment>
+
     <activity
         android:id="@+id/mainActivity"
         android:name="com.example.airquality.ui.main.MainActivity"
-        tools:layout="@layout/activity_main"/>
+        tools:layout="@layout/activity_main">
+
+    </activity>
+
+
 </navigation>
