aggiunta varie cose

--- a/AirQuality - Copia/app/src/main/res/layout/fragment_search.xml
+++ b/AirQuality - Copia/app/src/main/res/layout/fragment_search.xml
@@ -6,26 +6,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/researcher"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="20dp"
-        android:background="@color/white"
-        app:cardCornerRadius="30dp"
+    <Button
+        android:id="@+id/searchButton"
+        style="?attr/materialIconButtonStyle"
+        android:layout_width="66dp"
+        android:layout_height="70dp"
+        app:icon="@drawable/search"
+        app:iconSize="30dp"
+        app:iconTint="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <fragment
-            android:id="@+id/autocomplete_fragment"
-            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
