--- a/AirQuality - Copia/app/src/main/res/layout/fragment_home.xml
+++ b/AirQuality - Copia/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -369,6 +370,23 @@
                 </LinearLayout>
             </LinearLayout>
         </FrameLayout>
+
+        <Button
+            android:id="@+id/test_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+
+        <Button
+            android:id="@+id/delayed_notification_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button"
+            app:layout_constraintStart_toEndOf="@+id/test_button"
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
