--- a/AirQuality - Copia/app/src/main/res/navigation/nav_graph.xml
+++ b/AirQuality - Copia/app/src/main/res/navigation/nav_graph.xml
@@ -22,7 +22,11 @@ app:startDestination="@id/homeFragment">
         android:id="@+id/searchFragment"
         android:name="com.example.airquality.ui.preferences.SearchFragment"
         android:label="fragment_search"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_searchFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/accountFragment"
         android:name="com.example.airquality.ui.account.AccountFragment"
